# senso

./: LICENSE  MODULE.bazel
Modules/App/: BUILD
Modules/App/Sources/: SceneDelegate.swift  ViewController.swift
Senso/: AppDelegate.swift  BUILD  Info.plist  SceneDelegate.swift  ViewController.swift
Senso.xcodeproj/: project.pbxproj
