bazel_dep(
    name = "apple_support",
    version = "1.17.1"
)

bazel_dep(
    name = "rules_swift",
    version = "2.2.4",
    repo_name = "build_bazel_rules_swift"
)

bazel_dep(
    name = "rules_apple",
    version = "3.13.0",
    repo_name = "build_bazel_rules_apple"
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1"
)

bazel_dep(
    name = "rules_xcodeproj",
    version = "2.9.2"
)
